# RoverCoreOS

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
Arm Code/: ArmControl.cpp  Segment.java
Arm Code/Inverse Kinematics/: InverseKinematics.java
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
docs/: Controllers.md  I2C.md
experimental/: README.md
experimental/arm_code/: ArmControl.h  IK.py  rover_arm.ino
grip/: Tennis Ball CV Algorithm.grip
launch/: ar_tag_tracking.launch  autonomous_configuration.launch  autonomous_navigation.launch  base_station.launch  control_center.launch  demo_mode.launch  display_model.launch  display_rover.launch  display_rover5.launch  mapping.launch  nano_test.launch  start_rover.launch
navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
nodes/: base_controller.py  base_controller_arduino.py  base_station.py  driver.py
rover_5_model/meshes/: wheel_link1.stl  wheel_scaled.stl
rover_5_model/urdf/: ad_astra.urdf
rviz/: urdf.rviz
scripts/: install_dependencies  install_dependencies.sh
urdf/: ad_astra.urdf  rover_2_0.urdf  rover_5.urdf  slab.urdf
urdf/meshes/ad_astra/: README.md  arm_link1.STL  arm_link2.STL  arm_link3.STL  chassis_link.STL  left_train_link1.STL  right_train_link1.STL
urdf/meshes/rover_5/: Assem1.STL  base_link_scaled.stl  rack.stl  track_link1.stl
