<?xml version="1.0"?>
<package format="2">
  <name>rover_core_os</name>
  <version>0.5.0</version>
  <description>Core control functionality for the NIU Mars Rover Team's Ad Astra rover.</description>
  <maintainer email="ryandlewis.rl@gmail.com">Ryan D. Lewis</maintainer>
  <license>BSD</license>
  <url type="website">https://www.facebook.com/NIURover/</url>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
  <depend>phidgets_imu</depend>
  <depend>joy</depend>
  <depend>robot_localization</depend>
  <depend>nav_msgs</depend>
  <depend>depthimage_to_laserscan</depend>
  <depend>rgbd_launch</depend>
  <depend>rtabmap_ros</depend>
  <depend>rtabmap</depend>
  <!--<depend>python-smbus2</depend>-->

  <export>
  </export>
</package>
